# zenfeed_py

./: .gitignore  CLAUDE.md  Cargo.toml  PRIMARY_DESIGN.md  README.md  TODO.md  main.py  pyproject.toml  test.py
python/zenfeed/: __init__.py  __init__.pyi  cli.py  config.py  kvstorage.py  kvstorage.pyi  llm.py  notifier.py  rewrite.py  scheduler.py  scraper.py  zenfeed.pyi
src/: lib.rs  model.rs  storage.rs
src/storage/: block.rs  manifest.rs
src/storage/block/: chunk.rs  counter.rs  inverted_index.rs  primary_index.rs  vector_index.rs
tests/: test_config.py  test_kvstorage.py  test_notifier.py  test_rewrite.py  test_scraper.py
