[project]
name = "zenfeed-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.0",
    "anthropic>=0.105.2",
    "croniter>=6.2.2",
    "feedparser>=6.0.12",
    "maturin>=1.13.3",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["maturin>=1.13.3"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
